--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,7 @@
-spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
-spring.datasource.url=jdbc:oracle:thin:@127.0.0.1:1521:orcl
-spring.datasource.username=test06
-spring.datasource.password=test06
-spring.thymeleaf.cache=false
-spring.thymeleaf.mode=HTML5
-spring.thymeleaf.encoding=UTF-8
-spring.thymeleaf.content-type=text/html
-spring.thymeleaf.prefix=classpath:/templates/
-spring.thymeleaf.suffix=.html
-mybatis.mapper-locations=classpath:mapper/*.xml
-spring.resources.static-locations = classpath:/static/
+
+server.port=7333
+
+spring.datasource.driver_class_name= oracle.jdbc.driver.OracleDriver
+spring.datasource.url= jdbc:oracle:thin:@192.168.2.85:1521:agile9
+spring.datasource.username= plmforip
+spring.datasource.password= plm1234
